# ProjektCzerwcowy

./: CMakeLists.txt  Main.qml  README.md  databasehandler.cpp  databasehandler.h  main.cpp
